--- a/apps/client/src/app/pages/passenger-list/passenger-list.component.html
+++ b/apps/client/src/app/pages/passenger-list/passenger-list.component.html
@@ -24,11 +24,11 @@
 	</header>
 
 	<section class="vehicles-available">
-		<div class="card-vehicle">
-			<div class="card-vehicle-image">
+		<div class="vehicle-card">
+			<div class="vehicle-card-image">
 				<movic-vehicle color="#FF0000"></movic-vehicle>
 			</div>
-			<div class="card-vehicle-info">
+			<div class="vehicle-card-info">
 				<div class="vehicle-details">
 					<p class="label-medium vehicle-title">Chevrolet | Vitara</p>
 					<p class="label-medium vehicle-plate">AFN1234</p>
@@ -42,30 +42,31 @@
 	</section>
 
 	<section class="passengers">
-		<p class="label-small">Pasajeros de 2 de 3</p>
+		<p class="label-small quantity-of-passengers">Pasajeros de 2 de 3</p>
 		<div>
-			<div class="card-passenger">
+			<div class="passenger-card">
+
 				<img class="avatar" src="/assets/images/DriverPhoto.png" alt="Imágen del conductor" />
 
 				<section>
 					<div class="card-row label-medium">
-						<span class="driver-name">María Paula Forero</span>
+						<span class="passenger-name">María Paula Forero</span>
 						<div class="rating-information">
 							<img class="rating-icon" src="/assets/svgs/FullStarBlue.svg" alt="icono de rating">
-							<span class="card-passenger-info">4.8 (60)</span>
+							<span class="card-information">4.8 (60)</span>
 						</div>
 					</div>
 
 					<div class="card-row paragraph-xsmall">
-						<div class="card-passenger-info">
-							<img class="card-passenger-info-icon" src="/assets/svgs/WalkGrey.svg"
+						<div class="card-information">
+							<img class="card-information-icon" src="/assets/svgs/WalkGrey.svg"
 								alt="icono de distancia a caminar">
 							<span class="card-information-title">50 metros</span>
 						</div>
-						<div class="card-passenger-info">
-							<img class="card-passenger-info-icon" src="/assets/svgs/UnLink.svg"
+						<div class="card-information">
+							<img class="card-information-icon" src="/assets/svgs/UnLink.svg"
 								alt="icono de emparejamiento">
-							<span class="card-passenger-info-title">70% de emparejamiento</span>
+							<span class="card-information-title">70% de emparejamiento</span>
 						</div>
 					</div>
 				</section>
