chore: change color in driver card component rating and h1

--- a/apps/client/src/app/features/drivers/components/driver-card/driver-card.component.css
+++ b/apps/client/src/app/features/drivers/components/driver-card/driver-card.component.css
@@ -28,6 +28,10 @@
 	color: var(--primary-text-value);
 }
 
+.rating-number {
+	color: var(--primary-text-placeholder);
+}
+
 .card-information-title {
 	color: var(--primary-text-placeholder);
 }
