--- a/apps/client/src/app/features/drivers/components/driver-card/driver-card.component.html
+++ b/apps/client/src/app/features/drivers/components/driver-card/driver-card.component.html
@@ -8,7 +8,7 @@
 			<span class="driver-name">María Paula Forero</span>
 			<div class="rating-information">
 				<img class="rating-icon" src="/assets/svgs/FullStarBlue.svg" alt="icono de rating">
-				<span class="card-information">4.8 (60)</span>
+				<span class="card-information rating-number">4.8 (60)</span>
 			</div>
 		</div>
 
