--- a/apps/client/src/app/pages/passenger-list/passenger-list.component.html
+++ b/apps/client/src/app/pages/passenger-list/passenger-list.component.html
@@ -24,7 +24,7 @@
 			</section>
 		</header>
 
-		<section class="vehicles-available">
+		<section class="vehicle">
 			<div class="vehicle-card">
 				<div class="vehicle-card-image">
 					<movic-vehicle color="#FF0000"></movic-vehicle>
