feat: add external destination-selection component

--- a/apps/client/src/app/features/my-destinations/components/card-my-destination/card-my-destination.component.css
+++ b/apps/client/src/app/features/my-destinations/components/card-my-destination/card-my-destination.component.css
@@ -29,6 +29,7 @@ img {
 	backdrop-filter: blur(.75rem);
 	border-bottom-left-radius: 1rem;
 	border-bottom-right-radius: 1rem;
+	min-height: 5rem;
 }
 
 .destination-name {
