feat: confirm travel func

--- a/apps/client/src/app/pages/confirm-travel/confirm-travel.component.html
+++ b/apps/client/src/app/pages/confirm-travel/confirm-travel.component.html
@@ -43,7 +43,7 @@
 		</section>
 	</body>
 
-	<button mButton size="large">Siguiente</button>
+	<button mButton size="large" (click)="handleConfirm()">Siguiente</button>
 
 
 </page-layout>
