--- a/apps/client/src/app/pages/travel-lobby/travel-lobby.component.css
+++ b/apps/client/src/app/pages/travel-lobby/travel-lobby.component.css
@@ -1,3 +1,9 @@
+main {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+}
+
 header {
 	display: flex;
 	flex-direction: column;
@@ -134,6 +140,7 @@ h1 {
 	display: flex;
 	flex-direction: column;
 	gap: .9rem;
+	min-height: 50px;
 }
 
 /* Passenger Card */
@@ -205,4 +212,10 @@ h1 {
 
 .vehicle {
 	margin-top: 0.5rem;
+}
+
+.button-container {
+	display: flex;
+	justify-content: center;
+	margin-top: 1.5rem;
 }
