--- a/apps/client/src/app/pages/travel-lobby/travel-lobby.component.html
+++ b/apps/client/src/app/pages/travel-lobby/travel-lobby.component.html
@@ -2,23 +2,33 @@
 	<main>
 		<header>
 			<h1 class="heading-small">Lista de pasajeros</h1>
+			@if (travel?.forWomen) {
 			<div class="only-woman-info">
 				<img src="assets/svgs/SecurityShield.svg" alt="Escudo">
 				<p class="paragraph-small">Solo mujeres en el viaje</p>
 			</div>
+			}
 			<section class="route-information">
 				<div class="starting-point">
 					<img src="assets/svgs/StartingPointGray.svg" alt="Punto de Inicio" class="icon">
 					<div class="starting-point-info">
 						<p class="paragraph-small title">Punto de partida</p>
+						@if (travel?.type === 'from-ucab') {
 						<p class="paragraph-small location">UCAB</p>
+						} @else {
+						<p class="paragraph-small location">Ubicación actual</p>
+						}
 					</div>
 				</div>
 				<div class="external-destination">
+					@if (travel?.type === 'to-ucab') {
 					<img src="assets/svgs/ExternalPointGray.svg" alt="Destino Externo" class="icon">
+					}
 					<div class="external-destination-info">
+						@if (travel?.type === 'to-ucab') {
 						<p class="paragraph-small title">Destino Externo</p>
-						<p class="paragraph-small location">Mi casa Isla Dorada</p>
+						<p class="paragraph-small location">UCAB</p>
+						}
 					</div>
 				</div>
 			</section>
@@ -27,32 +37,36 @@
 		<section class="vehicle">
 			<div class="vehicle-card">
 				<div class="vehicle-card-image">
-					<movic-vehicle color="#FF0000"></movic-vehicle>
+					<movic-vehicle [color]="travel?.vehicle?.color!"></movic-vehicle>
 				</div>
 				<div class="vehicle-card-info">
 					<div class="vehicle-details">
-						<p class="label-medium vehicle-title">Chevrolet | Vitara</p>
-						<p class="label-medium vehicle-plate">AFN1234</p>
+						<p class="label-medium vehicle-title">{{travel?.vehicle?.brand}} | {{travel?.vehicle?.model}}</p>
+						<p class="label-medium vehicle-plate">{{travel?.vehicle?.plate}}</p>
 					</div>
 					<div class="vehcicle-specs">
-						<p class="label-medium">Rojo</p>
-						<p class="label-medium quantity-seats-available">Asientos disponibles 3 de 4</p>
+						<p class="label-medium">{{vehiclesColorService.getLabelByHex(travel?.vehicle?.color!)}}</p>
+						<p class="label-medium quantity-seats-available">Asientos disponibles {{travel?.availableSeatQuantity}} de
+							{{travel?.vehicle?.seatQuantity}}</p>
 					</div>
 				</div>
 			</div>
 		</section>
 
 		<section class="passengers">
-			<p class="label-small passengers-quantity">Pasajeros de 2 de 3</p>
+			<p class="label-small passengers-quantity">Pasajeros de {{travel?.rides?.length}} de
+				{{travel?.availableSeatQuantity}}</p>
 			<div class="passengers-list">
+
+				@for (r of travel?.rides; track r.id) {
 				<div class="passenger-card">
 
-					<img class="avatar" src="/assets/images/DriverPhoto.png" alt="Imágen del conductor" />
+					<img class="avatar" [src]="r.passenger.profilePicSrc" alt="Imágen del conductor" />
 
 					<section>
 						<div class="card-row justify-between label-medium">
 							<div class="card-row">
-								<span class="passenger-name">María Paula Forero</span>
+								<span class="passenger-name">{{r.passenger.firstName}} {{r.passenger.lastName}}</span>
 								<div class="rating-information">
 									<img class="rating-icon" src="/assets/svgs/FullStarBlue.svg" alt="icono de rating">
 									<span class="card-information rating-number">4.8 (60)</span>
@@ -63,83 +77,23 @@
 
 						<div class="card-row paragraph-xsmall">
 							<div class="card-information">
-								<img class="card-information-icon" src="/assets/svgs/WalkGrey.svg"
-									alt="icono de distancia a caminar">
-								<span class="card-information-title">50 metros</span>
+								<img class="card-information-icon" src="/assets/svgs/WalkGrey.svg" alt="icono de distancia a caminar">
+								<span class="card-information-title">{{r.passenger.walkDistance}} m</span>
 							</div>
 							<div class="card-information">
-								<img class="card-information-icon" src="/assets/svgs/UnLink.svg"
-									alt="icono de emparejamiento">
+								<img class="card-information-icon" src="/assets/svgs/UnLink.svg" alt="icono de emparejamiento">
 								<span class="card-information-title">70% de emparejamiento</span>
 							</div>
 						</div>
 					</section>
 				</div>
+				}
 
-				<div class="passenger-card">
-
-					<img class="avatar" src="/assets/images/DriverPhoto.png" alt="Imágen del conductor" />
-
-					<section>
-						<div class="card-row justify-between label-medium">
-							<div class="card-row">
-								<span class="passenger-name">María Paula Forero</span>
-								<div class="rating-information">
-									<img class="rating-icon" src="/assets/svgs/FullStarBlue.svg" alt="icono de rating">
-									<span class="card-information rating-number">4.8 (60)</span>
-								</div>
-							</div>
-							<img class="chat-icon" src="/assets/svgs/Chat.svg" alt="icono de chat">
-						</div>
-
-						<div class="card-row paragraph-xsmall">
-							<div class="card-information">
-								<img class="card-information-icon" src="/assets/svgs/WalkGrey.svg"
-									alt="icono de distancia a caminar">
-								<span class="card-information-title">50 metros</span>
-							</div>
-							<div class="card-information">
-								<img class="card-information-icon" src="/assets/svgs/UnLink.svg"
-									alt="icono de emparejamiento">
-								<span class="card-information-title">70% de emparejamiento</span>
-							</div>
-						</div>
-					</section>
-				</div>
-				<div class="passenger-card">
-
-					<img class="avatar" src="/assets/images/DriverPhoto.png" alt="Imágen del conductor" />
-
-					<section>
-						<div class="card-row justify-between label-medium">
-							<div class="card-row">
-								<span class="passenger-name">María Paula Forero</span>
-								<div class="rating-information">
-									<img class="rating-icon" src="/assets/svgs/FullStarBlue.svg" alt="icono de rating">
-									<span class="card-information rating-number">4.8 (60)</span>
-								</div>
-							</div>
-							<img class="chat-icon" src="/assets/svgs/Chat.svg" alt="icono de chat">
-						</div>
-
-						<div class="card-row paragraph-xsmall">
-							<div class="card-information">
-								<img class="card-information-icon" src="/assets/svgs/WalkGrey.svg"
-									alt="icono de distancia a caminar">
-								<span class="card-information-title">50 metros</span>
-							</div>
-							<div class="card-information">
-								<img class="card-information-icon" src="/assets/svgs/UnLink.svg"
-									alt="icono de emparejamiento">
-								<span class="card-information-title">70% de emparejamiento</span>
-							</div>
-						</div>
-					</section>
-				</div>
 			</div>
 		</section>
 
-		<button mButton size="large">Iniciar Viaje</button>
+		<div class="button-container">
+			<button mButton size="large">Iniciar Viaje</button>
+		</div>
 	</main>
-
 </page-layout>
