--- a/apps/client/src/app/pages/waiting-for-review/waiting-for-review.component.html
+++ b/apps/client/src/app/pages/waiting-for-review/waiting-for-review.component.html
@@ -2,7 +2,7 @@
 	<div class="container">
 		<h1 class="heading-xsmall">El conductor está revisando su solicitud...</h1>
 
-		<driver-card />
+		<!-- <driver-card /> -->
 
 		<button mButton [size]="'large'" severity="danger" (click)="cancelReview()">Cancelar solicitud</button>
 	</div>
