--- a/apps/client/src/app/features/my-destinations/components/card-my-destination/card-my-destination.component.html
+++ b/apps/client/src/app/features/my-destinations/components/card-my-destination/card-my-destination.component.html
@@ -1,11 +1,11 @@
 <div class="card-destination-container">
 	<button mButton size="small" class="view-button">Ver</button>
-	<img [src]="imageDestinationUrl" alt="map">
+	<img [src]="destination.photoSrc!" alt="Destination image">
 	<div class="card-destination-information">
 		<h2 class="heading-xsmall destination-name">{{destination.name}}</h2>
 		@if(actionButtons){
 		<div class="card-buttons-container">
-			<button mButton size="small" severity="tertiary">Eliminar</button>
+			<button mButton size="small" severity="tertiary" (click)="onDelete.emit()">Eliminar</button>
 			<button mButton size="small" severity="primary">Editar</button>
 		</div>
 		}
