--- a/apps/client/src/app/pages/travel-lobby/travel-lobby.component.css
+++ b/apps/client/src/app/pages/travel-lobby/travel-lobby.component.css
@@ -219,3 +219,15 @@ h1 {
 	justify-content: center;
 	margin-top: 1.5rem;
 }
+
+.passengers-list-header {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.view-requests-button {
+	border-radius: 10px;
+	padding: 0.5rem 1.5rem;
+	border: solid 2px var(--primary-text-value);
+}
