--- a/apps/client/src/app/features/my-destinations/components/card-my-destination/card-my-destination.component.css
+++ b/apps/client/src/app/features/my-destinations/components/card-my-destination/card-my-destination.component.css
@@ -5,8 +5,8 @@
 
 img {
 	border-radius: 16px;
-	min-height: 18.75rem;
-	min-width: 18.75rem;
+	height: 18.75rem;
+	width: 18.75rem;
 }
 
 .view-button {
@@ -18,7 +18,7 @@ img {
 .card-destination-information {
 	display: flex;
 	flex-direction: column;
-	gap: 1.4375rem;
+	gap: 1rem;
 	padding: 0 .875rem;
 	padding-top: 1.0rem;
 	padding-bottom: 1.375rem;
