--- a/apps/client/src/app/pages/travel-type-selection/travel-type-selection.component.html
+++ b/apps/client/src/app/pages/travel-type-selection/travel-type-selection.component.html
@@ -8,9 +8,10 @@
 			<div class="card-info heading-xsmall">
 				<img class="icon" src="/assets/svgs/University.svg" alt="" />
 
-				<div>
-					<h3>UCAB → Destino Externo</h3>
-					<p class="label-small">Servicio de movilidad con un punto inicial en la UCAB y punto final un destino Externo.
+				<div class="information-text">
+					<h3 class="option-name">UCAB → Destino Externo</h3>
+					<p class="label-small">Servicio de movilidad con un punto inicial en la UCAB y punto final un
+						destino Externo.
 					</p>
 				</div>
 			</div>
@@ -23,8 +24,8 @@
 			<div class="card-info heading-xsmall">
 				<img class="icon" src="/assets/svgs/City.svg" alt="" />
 
-				<div>
-					<h3>Destino Externo → UCAB</h3>
+				<div class="information-text">
+					<h3 class="option-name">Destino Externo → UCAB</h3>
 					<p class="label-small">Servicio de movilidad con un punto inicial externo y punto final la UCAB.</p>
 				</div>
 			</div>
