--- a/apps/client/src/app/pages/chat/chat.component.css
+++ b/apps/client/src/app/pages/chat/chat.component.css
@@ -5,46 +5,79 @@ h1 {
 	color: var(--primary-text-label);
 }
 
+.msgs-container {
+	display: flex;
+	flex-direction: column;
+	min-width: 100%;
+	overflow-y: auto;
+	height: 75vh;
+	padding: 1rem;
+}
+
+/* Common styles for message containers */
+.msg-container,
 .own-msg-container {
 	display: flex;
 	position: relative;
 	flex-wrap: wrap;
+	flex-shrink: 1;
+	flex-basis: auto;
+	max-width: 80%;
+	min-width: 20%;
 	border-radius: 0.5rem;
 	padding: 0.5rem 0.5rem 1.25rem 0.5rem;
 	margin: 0.5rem;
-	background-color: #0183fe;
-
-	.msg {
-		color: #fff;
-	}
-
-	.msg-timestamp {
-		position: absolute;
-		bottom: 0.25rem;
-		right: 0.5rem;
-		font-size: 0.6rem;
-		color: #c7cde6;
-	}
+	word-wrap: break-word;
 }
 
+/* Styles for own messages */
+.own-msg-container {
+	background-color: #0183fe;
+	align-self: flex-end;
+}
+
+/* Styles for other messages */
 .msg-container {
+	background-color: #f3e9e9;
+	align-self: flex-start;
+}
+
+/* Common styles for messages */
+.msg-container .msg,
+.own-msg-container .msg {
+	font-size: 0.8rem;
+}
+
+.own-msg-container .msg {
+	color: #fff;
+}
+
+.msg-container .msg {
+	color: #000;
+}
+
+/* Common styles for timestamps */
+.msg-container .msg-timestamp,
+.own-msg-container .msg-timestamp {
+	position: absolute;
+	bottom: 0.25rem;
+	right: 0.5rem;
+	font-size: 0.5rem;
+}
+
+.own-msg-container .msg-timestamp {
+	color: #c7cde6;
+}
+
+.msg-container .msg-timestamp {
+	color: #1e1e21;
+}
+
+.text-box {
 	display: flex;
 	position: relative;
 	flex-wrap: wrap;
 	border-radius: 0.5rem;
-	padding: 0.5rem 0.5rem 1.25rem 0.5rem;
+	padding: 0.5rem;
 	margin: 0.5rem;
-	background-color: #f3e9e9;
-
-	.msg {
-		color: #000;
-	}
-
-	.msg-timestamp {
-		position: absolute;
-		bottom: 0.25rem;
-		right: 0.5rem;
-		font-size: 0.6rem;
-		color: #1e1e21;
-	}
 }
