--- a/apps/client/src/app/pages/travel-waiting-room/travel-waiting-room.component.html
+++ b/apps/client/src/app/pages/travel-waiting-room/travel-waiting-room.component.html
@@ -17,37 +17,36 @@
 				</div>
 			</div>
 		</section>
-	</header>
-
-	<section>
 		<div class="card-row paragraph-xsmall">
 			<div class="card-information">
 				<img class="card-information-icon" src="/assets/svgs/WalkGrey.svg" alt="icono de distancia a caminar" />
-				<span class="card-information-title">150m</span>
+				<span class="card-information-title paragraph-small">1500 mts</span>
 			</div>
 			<div class="card-information">
 				<img class="card-information-icon" src="/assets/svgs/UnLink.svg" alt="icono de emparejamiento" />
-				<span class="card-information-title">70%</span>
+				<span class="card-information-title paragraph-small">70%</span>
 			</div>
 			<div class="only-woman-info">
 				<img src="assets/svgs/SecurityShield.svg" alt="Escudo">
 				<p class="paragraph-small">Solo mujeres en el viaje</p>
 			</div>
 		</div>
-		<div>
-			<div>
-				<p>Maria Paula Forero</p>
-				<img class="chat-icon" src="/assets/svgs/Chat.svg" alt="icono de chat">
-			</div>
-			<div class="rating-information">
-				<img class="rating-icon" src="/assets/svgs/FullStarBlue.svg" alt="icono de rating" />
-				<span class="card-information rating-number">4.8 (60)</span>
-			</div>
-			<movic-vehicle color="#fffff"></movic-vehicle>
-			<div>
-				<p class="paragraph-medium">Chevrolet | Spark</p>
-				<p class="paragraph-medium">A17BN1E</p>
-			</div>
+	</header>
+
+	<section class="driver-vehicle-information">
+		<div class="driver-information">
+			<img class="avatar" src="assets/images/DriverPhoto.png" alt="Imágen del conductor" />
+			<p class="label-medium">Maria Paula Forero</p>
+			<img class="chat-icon" src="/assets/svgs/Chat.svg" alt="icono de chat">
+		</div>
+		<div class="rating-information">
+			<img class="rating-icon" src="/assets/svgs/FullStarBlue.svg" alt="icono de rating" />
+			<span class="card-information rating-number label-small">4.8 (60)</span>
+		</div>
+		<movic-vehicle color="#fffff"></movic-vehicle>
+		<div class="vehicle-information">
+			<p class="paragraph-medium">Chevrolet | Spark</p>
+			<p class="paragraph-medium">A17BN1E</p>
 		</div>
 	</section>
 </page-layout>
